@@ -1,0 +1,4 @@
+The package is a development of nfssext.sty, distributed with
+the examples for the font installation guide. The package has
+been developed for use in packages such as cfr-lm and
+venturisadf.
